2011-08-09  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix XML I/O.

	* demo/viewer/main.cc: Add a missing include.

	* demo/viewer/viewer.cc,
	* demo/xml2doc/templates/html/main.xsl,
	* demo/xml2doc/templates/html/main_base64.xsl,
	* demo/xml2doc/templates/pdf/line.xsl,
	* scribo/io/xml/internal/extended_page_xml_visitor.hh,
	* scribo/io/xml/internal/full_xml_visitor.hh,
	* scribo/io/xml/load.hh: Update tag names.

2011-08-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Regen generated files.

	* headers.mk,
	* tests/unit_test/unit-tests.mk: Here.

2011-08-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/text/extract_paragraphs.hh: Fix compilation.

2011-08-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Preserve a single algorithm for outlines computation.

	* scribo/util/component_outline.hh: Remove.

	* scribo/util/component_precise_outline.hh: Add options.

	* scribo/tests/util/Makefile.am: Fix targets.

	* scribo/tests/util/component_outline.cc: Remove.

	* scribo/tests/util/component_precise_outline.cc: New.

2011-08-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix use of skeleton computation algorithms in Scribo.

	* scribo/estim/components_features.hh,
	* scribo/estim/internal/compute_skeleton.hh: Here.

2011-07-01  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/text/paragraphs.hh: Adding horizontal separators check in
	paragraphs construction.

2011-06-28  Guillaume Lazzara  <z@lrde.epita.fr>

	Regen generated files.

	* headers.mk,
	* tests/unit_test/unit-tests.mk: Here.

2011-06-28  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix compilation.

	* scribo/core/object_groups.hh,
	* scribo/debug/logger.hh,
	* scribo/estim/object_groups_mean_width.hh,
	* src/debug/show_paragraph_blocks.cc,
	* src/debug/show_text_lines.cc,
	* src/non_text_components.cc,
	* src/primitive/extract/alignments.cc,
	* scribo/text/extract_paragraphs_hdoc.hh: Fix namespace ambiguities.

	* scribo/core/object_links.hh: Remove useless find_root().

	* scribo/debug/bboxes_enlarged_image.hh,