@@ -1,5 +1,15 @@
 2011-08-09  Guillaume Lazzara  <z@lrde.epita.fr>
 
+	Small fixes in Scribo.
+
+	* scribo/core/paragraph_info.hh: Update delta baseline.
+
+	* scribo/primitive/extract/non_text.hh: Fill extension.
+
+	* scribo/util/component_precise_outline.hh: Adjust extension.
+
+2011-08-09  Guillaume Lazzara  <z@lrde.epita.fr>
+
 	Fix XML I/O.
 
 	* demo/viewer/main.cc: Add a missing include.
